# simple_iot_api

./: Cargo.toml  Procfile  backup.rs
src/: main.rs
src/modules/: bulb.rs  colours.rs  lights.rs  mod.rs  route_lights.rs  routes.rs  sensors.rs
